objects/MSL_MODS_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for MSL Project</description>
        <label>Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000001pdD6EAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for MSL Project</description>
        <label>Lead ID</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N30000001pdDVEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MHS_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for MSL Project</description>
        <label>MHS ID</label>
        <referenceTo>MHS_MODS_Details__c</referenceTo>
        <relationshipName>R00N30000001pdDaEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MODS_Contact_ID__c</fullName>
        <description>This field is for MSL Project</description>
        <externalId>true</externalId>
        <label>MODS Contact ID</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <description>This Object is for MSL Project</description>
    <label>MSL MODS Mapping</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>MSL MODS MAPPING NUMBER</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSL MODS Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>